--- a/css/styles.css
+++ b/css/styles.css
@@ -18,10 +18,13 @@ html,body{
 }
 
 .jumbotron{
-    padding-top:120px;
     display:flex;
     flex-grow: 1;
     box-sizing: border-box;
+}
+
+.navbar-adjustment{
+    padding-top:108px;
 }
 
 .container-image {
