--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,14 @@ nav{
     z-index: 100;
 }
 
-.navbar-collapse{
-    width:100%;
-    text-align: center;
-}
+img { 
+    image-rendering: optimizeSpeed;             /*                     */
+    image-rendering: -moz-crisp-edges;          /* Firefox             */
+    image-rendering: -o-crisp-edges;            /* Opera               */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed       */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
+    }
 
 html,body{
     height:100%;
@@ -18,6 +22,23 @@ html,body{
     padding:0;
 }
 
+.img-attribute{
+    color: black;
+    font-size: xx-small;
+    position: absolute;
+    top:100%;
+    left:0;
+}
+
+.navbar-collapse{
+    width:100%;
+    text-align: center;
+}
+
+.homepage-image{
+    position: relative;
+}
+
 .jumbotron{
     display:flex;
     flex-grow: 1;
@@ -25,7 +46,7 @@ html,body{
 }
 
 .navbar-adjustment{
-    padding-top:108px;
+    padding-top:95px;
 }
 
 
@@ -45,7 +66,7 @@ html,body{
     font-size: 18px;
 }
 
-@media(min-width:576px){
+@media(max-width:767.98px){
     .navbar-nav{
         margin:0;
     }
