--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,14 @@ html,body{
 
 .img-attribute{
     color: black;
-    font-size: xx-small;
+    font-size: 8px;
     position: absolute;
-    top:100%;
+    top:98%;
     left:0;
+}
+
+.img-attribute > a{
+    color:black;
 }
 
 .navbar-collapse{
@@ -68,6 +72,12 @@ html,body{
 
 .company-num{
     font-size: x-small;
+    margin-bottom: 0;
+}
+
+.creator{
+    margin:0;
+    font-size: 10px;
 }
 
 @media(max-width:767.98px){
@@ -75,7 +85,7 @@ html,body{
         margin:0;
     }
     .homepage-image{
-        height:40%;
+        height:30%;
     }
 }
 @media(min-width:768px){
@@ -86,18 +96,25 @@ html,body{
     }
 
     .homepage-image{
-        height:50%;
+        height:30%;
     }
 }
 @media(min-width:992px){
 
     .homepage-image{
-        height:50%;
+        height:40%;
     }
 }
 @media(min-width:1200px){
 
     .homepage-image{
-        height:70%;
+        height:50%;
+    }
+}
+
+@media(min-width:1500px){
+
+    .homepage-image{
+        height:60%;
     }
 }
