--- a/css/styles.css
+++ b/css/styles.css
@@ -5,15 +5,6 @@ nav{
     z-index: 100;
 }
 
-img { 
-    image-rendering: optimizeSpeed;             /*                     */
-    image-rendering: -moz-crisp-edges;          /* Firefox             */
-    image-rendering: -o-crisp-edges;            /* Opera               */
-    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
-    image-rendering: optimize-contrast;         /* CSS3 Proposed       */
-    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
-    }
-
 html,body{
     height:100%;
     display: flex;
@@ -71,6 +62,24 @@ html,body{
     font-size: 18px;
 }
 
+.list-content{
+    font-weight: lighter;
+    font-size:16px;
+    list-style: none;
+}
+
+
+  
+.list-content > li::before {
+    content: "\2022";
+    color: black;
+    font-weight: 400;
+    font-size: 18px;
+    display: inline-block; 
+    width: 1em;
+    margin-left: -1em;
+  }
+
 .relative{
     position:relative !important;
 }
@@ -90,7 +99,7 @@ html,body{
         margin:0;
     }
     .homepage-image{
-        height:30%;
+        height:30vh;
     }
 }
 @media(min-width:768px){
@@ -101,19 +110,26 @@ html,body{
     }
 
     .homepage-image{
-        height:30%;
+        height:30vh;
     }
 }
 @media(min-width:992px){
 
     .homepage-image{
-        height:40%;
+        height:40vh;
     }
 }
 @media(min-width:1200px){
 
     .homepage-image{
-        height:50%;
+        height:50vh;
+    }
+}
+
+@media(min-width:1500px){
+
+    .homepage-image{
+        height:60vh;
     }
 }
 
