tweaked images again

--- a/css/styles.css
+++ b/css/styles.css
@@ -99,7 +99,7 @@ html,body{
         margin:0;
     }
     .homepage-image{
-        height:30vh;
+        height:30vh !important;
     }
 }
 @media(min-width:768px){
@@ -110,26 +110,26 @@ html,body{
     }
 
     .homepage-image{
-        height:30vh;
+        height:30vh !important;
     }
 }
 @media(min-width:992px){
 
     .homepage-image{
-        height:40vh;
+        height:40vh !important;
     }
 }
 @media(min-width:1200px){
 
     .homepage-image{
-        height:50vh;
+        height:50vh !important;
     }
 }
 
 @media(min-width:1500px){
 
     .homepage-image{
-        height:60vh;
+        height:60vh !important;
     }
 }
 
