--- a/css/styles.css
+++ b/css/styles.css
@@ -95,9 +95,11 @@ html,body{
 }
 
 @media(max-width:767.98px){
+    /*
     .navbar-nav{
         margin:0;
     }
+    */
     .homepage-image{
         height:30vh !important;
         width:auto;
