tweaked navbar on very small screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -91,6 +91,13 @@ html,body{
 }
 
 
+@media(max-width:350px){
+    .navbar-nav{
+        padding:0 !important;
+    }
+
+}
+
 @media(max-width:767.98px){
 
     .navbar-adjustment{
