--- a/css/styles.css
+++ b/css/styles.css
@@ -92,7 +92,8 @@ html,body{
 
 
 @media(max-width:350px){
-    .navbar-nav{
+
+    .navbar{
         padding:0 !important;
     }
 
@@ -104,7 +105,7 @@ html,body{
         padding-top:105px;
     }
     
-    .navbar-nav{
+    .navbar{
         margin:0;
     }
     
@@ -118,7 +119,7 @@ html,body{
         padding-top:95px;
     }
     
-    .navbar-nav{
+    .navbar{
         margin-left: auto;
         margin-right: 3rem; 
     }
