navbar css tweaks

--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,8 @@ html,body{
 @media(max-width:350px){
 
     .navbar{
-        padding:0 !important;
+        padding-left:0 !important;
+        padding-right:0 !important;
     }
 
 }
