--- a/css/styles.css
+++ b/css/styles.css
@@ -98,6 +98,10 @@ html,body{
         padding-right:0 !important;
     }
 
+    .navbar-brand{
+        margin-left:0 !important;
+    }
+
 }
 
 @media(max-width:767.98px){
