navbar css tweaks

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,10 @@ html,body{
         padding-top:105px;
     }
     
+    .navbar-nav{
+        margin:0;
+    }
+    
     .homepage-image{
         min-height:40vh !important;
     }
@@ -118,6 +122,11 @@ html,body{
 
     .navbar-adjustment{
         padding-top:95px;
+    }
+    
+    .navbar-nav{
+        margin-left: auto;
+        margin-right: 3rem; 
     }
 
     .homepage-image{
