--- a/css/styles.css
+++ b/css/styles.css
@@ -13,6 +13,15 @@ html,body{
     padding:0;
 }
 
+img { 
+    image-rendering: optimizeSpeed;             /*                     */
+    image-rendering: -moz-crisp-edges;          /* Firefox             */
+    image-rendering: -o-crisp-edges;            /* Opera               */
+    image-rendering: -webkit-optimize-contrast; /* Chrome (and Safari) */
+    image-rendering: optimize-contrast;         /* CSS3 Proposed       */
+    -ms-interpolation-mode: nearest-neighbor;   /* IE8+                */
+    }
+
 .img-attribute{
     color: black;
     font-size: 8px;
@@ -35,6 +44,10 @@ html,body{
     position: relative !important;
 }
 
+.relative{
+    position: relative !important;
+}
+
 .jumbotron{
     display:flex;
     flex-grow: 1;
@@ -50,7 +63,7 @@ html,body{
 
 .list-content{
     font-weight: lighter;
-    font-size:16px;
+    font-size:18px;
     list-style: none;
 }
   
@@ -67,6 +80,14 @@ html,body{
 .creator{
     margin:0;
     font-size: 10px;
+    font-weight: lighter;
+}
+
+.footer{
+    text-align: justify;
+    font-weight: lighter;
+    margin:0;
+    font-size: 18px;
 }
 
 
@@ -88,12 +109,35 @@ html,body{
     .navbar-adjustment{
         padding-top:105px;
     }
+
+    .navbar-nav{
+        margin: 0;
+    }
+
     
     .homepage-image{
         min-height:40vh !important;
     }
 }
+
+@media(max-width:575.98px){
+
+    .col-12{
+        text-align: center !important;
+    }
+
+    .creator{
+        display:none;
+    }
+
+}
+
 @media(min-width:768px){
+
+    .navbar-nav{
+        margin-left: auto;
+        margin-right: 3rem; 
+    }
 
     .navbar-adjustment{
         padding-top:95px;
@@ -106,9 +150,14 @@ html,body{
 @media(min-width:992px){
 
     .homepage-image{
-        min-height:60vh !important;
+        min-height:50vh !important;
     }
 }
 
+@media (min-width: 1200px) {
 
+    .homepage-image{
+        min-height:60vh !important;
+    }
+}
 
