--- a/css/styles-v1.0.0.css
+++ b/css/styles-v1.0.0.css
@@ -6,12 +6,26 @@ nav{
 }
 
 html,body{
-    height:100%;
-    display: flex;
+    display:flex;
     flex-direction: column;
+    height:100%;
     margin:0;
     padding:0;
 }
+
+.ie-fixMinHeight {
+    display:flex;
+    flex-direction:column;
+}
+
+.content {
+    min-height: 100vh;
+    height:200px;
+    width:100%;
+    display:flex;
+    flex-direction:column;
+}
+
 
 .img-attribute{
     color: black;
@@ -32,16 +46,11 @@ html,body{
     text-align: center;
 }
 
-.homepage-image{
-    position: relative !important;
-}
-
 .relative{
     position: relative !important;
 }
 
 .jumbotron{
-    display:flex;
     flex-grow: 1;
     box-sizing: border-box;
 }
@@ -108,6 +117,7 @@ html,body{
 
     
     .homepage-image{
+        height:200px;
         min-height:40vh !important;
     }
 }
@@ -136,12 +146,14 @@ html,body{
     }
     
     .homepage-image{
+        height:200px;
         min-height: 40vh !important;
     }
 }
 @media(min-width:992px){
 
     .homepage-image{
+        height:200px;
         min-height:50vh !important;
     }
 }
@@ -149,6 +161,7 @@ html,body{
 @media (min-width: 1200px) {
 
     .homepage-image{
+        height:200px;
         min-height:60vh !important;
     }
 }
